Extract shared metrics collector
OpenMetrics owned both metric discovery and exposition. That made
reuse by other exporters require an OpenMetrics dependency, or force
them to reverse-parse rendered metric names.

Move discovery into a shared metrics module and carry structured source
metadata with each collected metric group. OpenMetrics now adapts the
shared collected groups back into its existing exposition shape,
including composite stats and rendered submetric filtering.